@@ -5,6 +5,8 @@
 - Basic support RediSearch, redis-graph types 
 - Json keys validation
 - MGET command UI handling
+- PEXPIRE command UI handling
+- PTTL command UI handling
 
 1.9.1 / November 4, 2017
 [Alexandr Topilski]
