@@ -22,6 +22,9 @@
 
 #include "core/module_info.h"
 
+#define REDIS_GET_PTTL_COMMAND "PTTL"
+#define REDIS_CHANGE_PTTL_COMMAND "PEXPIRE"
+
 namespace fastonosql {
 namespace core {
 namespace redis {
@@ -51,8 +54,11 @@ class CommandTranslator : public ICommandTranslator {
   common::Error IncrBy(const NKey& key, int inc, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
   common::Error IncrByFloat(const NKey& key, double inc, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
 
-  common::Error ModuleLoadCommand(const ModuleInfo& module, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
-  common::Error ModuleUnloadCommand(const ModuleInfo& module, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
+  common::Error ModuleLoad(const ModuleInfo& module, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
+  common::Error ModuleUnload(const ModuleInfo& module, command_buffer_t* cmdstring) WARN_UNUSED_RESULT;
+
+  common::Error PExpire(const NKey& key, ttl_t ttl, command_buffer_t* cmdstring) const WARN_UNUSED_RESULT;
+  common::Error PTTL(const NKey& key, command_buffer_t* cmdstring) const WARN_UNUSED_RESULT;
 
  private:
   virtual common::Error CreateKeyCommandImpl(const NDbKValue& key, command_buffer_t* cmdstring) const override;
