@@ -24,13 +24,14 @@
 
 #include "core/types.h"
 
-#define NO_TTL -1
-#define EXPIRED_TTL -2
+#define NO_TTL -1       // key exists but has no associated expire
+#define EXPIRED_TTL -2  // key does not exist
 
 namespace fastonosql {
 namespace core {
 
-typedef long long ttl_t;
+typedef long long ttl_t;  // in seconds or NO_TTL, EXPIRED_TTL
+typedef ttl_t pttl_t;
 COMPILE_ASSERT(std::numeric_limits<ttl_t>::max() >= NO_TTL && NO_TTL >= std::numeric_limits<ttl_t>::min(),
                "NO_TTL define must be in ttl type range");
 COMPILE_ASSERT(std::numeric_limits<ttl_t>::max() >= EXPIRED_TTL && EXPIRED_TTL >= std::numeric_limits<ttl_t>::min(),
